.k8s/overlays/dev/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: backend
  type: ClusterIP
