.k8s/overlays/dev/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 3000
  selector:
    app: frontend
  type: ClusterIP
