.k8s/overlays/dev/ingress.yml
apiVersion: v1
kind: Service
metadata:
  name: ingress
  namespace: ingress
spec:
  selector:
    name: nginx-ingress-microk8s
  type: LoadBalancer
  loadBalancerIP: 130.61.237.219
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
    - name: https
      protocol: TCP
      port: 443
      targetPort: 443
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress-microk8s
  labels:
    app: nginx-ingress-microk8s
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-forwarded-headers: "true"
spec:
  rules:
    - host: "130.61.237.219.nip.io"
      http:
        paths:
          - pathType: Prefix
            path: "/(.*)"
            backend:
              service:
                name: frontend
                port:
                  number: 3000
    - host: "api.130.61.237.219.nip.io"
      http:
        paths:
          - pathType: Prefix
            path: "/(.*)"
            backend:
              service:
                name: backend
                port:
                  number: 8080
